# mining-drones-idle

./: .gitignore  AGENTS.md  DRONE_OWNERSHIP_ANALYSIS.md  ENERGY_ISSUE_EXAMINATION.md  README.md  eslint.config.js  idea-notes.md  idea.md  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  postcss.config.mjs  tsconfig.app.json  tsconfig.node.json  tsconfig.spec.json  vite.config.ts  vitest.config.ts
.github/: copilot-instructions.md
.github/workflows/: ci.yml  (+2 more)
.jules/: bolt.md
.serena/: project.yml
docs/: ARCHITECTURE.md  RESOURCE_DISTRIBUTION_ANALYSIS.md  best-practices.md  gamebalance-report-v0.1.4f.md  more-ideas.md  rust-wasm-dev.md  src-best-practices-audit.md
memory/: TASK016-COMPLETION-SUMMARY.md  activeContext.md  productContext.md  progress.md  projectbrief.md  requirements.md  systemPatterns.md  techContext.md
output/: index.html
plan/: dynamic-asteroid-biomes-plan.md  implementation-plan.md  plan-rust-simulation.md  refactor-store.md
rust-engine/: Cargo.toml
rust-engine/src/: api.rs  buffers.rs  constants.rs  error.rs  lib.rs  modifiers.rs  parity_debug.rs  rng.rs  schema.rs  sinks.rs  wasm.rs
rust-engine/src/systems/: asteroids.rs  drone_ai.rs  energy.rs  fleet.rs  global_refinery.rs  logistics.rs  mining.rs  mod.rs  movement.rs  power.rs  refinery.rs  unload.rs
rust-engine/tests/: logistics_integration.rs
scripts/: check-wasm-pack.js  playwright-server.js  scan-long-files.cjs  scan-long-files.js
spec/: factory-buyable-spec.md  spec-full-idea.md
src/: App.tsx  main.tsx  styles.css
(+390 files in other folders)
