[package]
name = "rust-engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
wasm = ["wasm-bindgen"]

# Avoid requiring platform-specific wasm-opt binaries during local builds
# wasm-pack will skip wasm-opt when this flag is set to false
[package.metadata.wasm-pack]
wasm-opt = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
wasm-bindgen = { version = "0.2", optional = true }
